<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CityActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_information"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:title="@string/action_information" />

</menu>