<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome"
        android:layout_width="fill_parent"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/tvWelcome"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="fill_parent"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tvWelcome"
        android:hint="@string/login"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="fill_parent"
        android:layout_below="@+id/etLogin"
        android:layout_marginTop="12dp"
        android:hint="@string/pass"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnValidate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/validate"
        android:layout_below="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>
